// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ModelStatsDisplay /> > should handle large values without wrapping or overlapping 1`] = `
"
  ERROR  Text string "Model Stats" must be rendered inside <Text> component

 file:///Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/ink/src/reconciler.ts:230
 :10

 -createTextInsta
  ce             (file:///Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/ink/src/
                 reconciler.ts:230:10)
 -completeWor
             (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler/cj
             s/react-reconciler.development.js:9082:42)
 -runWithFiberIn
  EV            (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler
                /cjs/react-reconciler.development.js:1738:13)
 -completeUnitOfW
  rk             (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconcile
                 r/cjs/react-reconciler.development.js:12962:19)
 -performUnitOfW
  rk            (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler
                /cjs/react-reconciler.development.js:12843:11)
 -workLoopSyn
             (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler/cj
             s/react-reconciler.development.js:12644:41)
 -renderRootSy
  c           (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler/c
              js/react-reconciler.development.js:12624:11)
 -performWorkOnR
  ot            (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler
                /cjs/react-reconciler.development.js:12135:44)
 -performSyncWorkOn
  oot              (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconci
                   ler/cjs/react-reconciler.development.js:2446:7)
 -flushSyncWorkAcrossRoo
  s_impl                (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-re
                        conciler/cjs/react-reconciler.development.js:2294:21)
"
`;

exports[`<ModelStatsDisplay /> > should not display conditional rows if no model has data for them 1`] = `
"
  ERROR  Text string "Model Stats" must be rendered inside <Text> component

 file:///Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/ink/src/reconciler.ts:230
 :10

 -createTextInsta
  ce             (file:///Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/ink/src/
                 reconciler.ts:230:10)
 -completeWor
             (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler/cj
             s/react-reconciler.development.js:9082:42)
 -runWithFiberIn
  EV            (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler
                /cjs/react-reconciler.development.js:1738:13)
 -completeUnitOfW
  rk             (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconcile
                 r/cjs/react-reconciler.development.js:12962:19)
 -performUnitOfW
  rk            (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler
                /cjs/react-reconciler.development.js:12843:11)
 -workLoopSyn
             (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler/cj
             s/react-reconciler.development.js:12644:41)
 -renderRootSy
  c           (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler/c
              js/react-reconciler.development.js:12624:11)
 -performWorkOnR
  ot            (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler
                /cjs/react-reconciler.development.js:12135:44)
 -performSyncWorkOn
  oot              (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconci
                   ler/cjs/react-reconciler.development.js:2446:7)
 -flushSyncWorkAcrossRoo
  s_impl                (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-re
                        conciler/cjs/react-reconciler.development.js:2294:21)
"
`;

exports[`<ModelStatsDisplay /> > should render "no API calls" message when there are no active models 1`] = `
"
  ERROR  Text string "No API calls have been made in this session." must be rendered inside <Text>
        component

 file:///Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/ink/src/reconciler.ts:230
 :10

 -createTextInsta
  ce             (file:///Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/ink/src/
                 reconciler.ts:230:10)
 -completeWor
             (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler/cj
             s/react-reconciler.development.js:9082:42)
 -runWithFiberIn
  EV            (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler
                /cjs/react-reconciler.development.js:1738:13)
 -completeUnitOfW
  rk             (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconcile
                 r/cjs/react-reconciler.development.js:12962:19)
 -performUnitOfW
  rk            (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler
                /cjs/react-reconciler.development.js:12843:11)
 -workLoopSyn
             (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler/cj
             s/react-reconciler.development.js:12644:41)
 -renderRootSy
  c           (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler/c
              js/react-reconciler.development.js:12624:11)
 -performWorkOnR
  ot            (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler
                /cjs/react-reconciler.development.js:12135:44)
 -performSyncWorkOn
  oot              (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconci
                   ler/cjs/react-reconciler.development.js:2446:7)
 -flushSyncWorkAcrossRoo
  s_impl                (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-re
                        conciler/cjs/react-reconciler.development.js:2294:21)
"
`;

exports[`<ModelStatsDisplay /> > theme compliance > should use Colors.Foreground for the empty state message 1`] = `
"
  ERROR  Text string "No API calls have been made in this session." must be rendered inside <Text>
        component

 file:///Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/ink/src/reconciler.ts:230
 :10

 -createTextInsta
  ce             (file:///Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/ink/src/
                 reconciler.ts:230:10)
 -completeWor
             (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler/cj
             s/react-reconciler.development.js:9082:42)
 -runWithFiberIn
  EV            (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler
                /cjs/react-reconciler.development.js:1738:13)
 -completeUnitOfW
  rk             (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconcile
                 r/cjs/react-reconciler.development.js:12962:19)
 -performUnitOfW
  rk            (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler
                /cjs/react-reconciler.development.js:12843:11)
 -workLoopSyn
             (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler/cj
             s/react-reconciler.development.js:12644:41)
 -renderRootSy
  c           (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler/c
              js/react-reconciler.development.js:12624:11)
 -performWorkOnR
  ot            (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler
                /cjs/react-reconciler.development.js:12135:44)
 -performSyncWorkOn
  oot              (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconci
                   ler/cjs/react-reconciler.development.js:2446:7)
 -flushSyncWorkAcrossRoo
  s_impl                (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-re
                        conciler/cjs/react-reconciler.development.js:2294:21)
"
`;

exports[`<ModelStatsDisplay /> > token calculation and labels > should not show negative input tokens when cached exceeds prompt 1`] = `
"
  ERROR  theme is not defined

 src/ui/components/ModelStatsDisplay.tsx:180:24

 177:         title="Input"
 178:         isSubtle
 179:         values={getModelValues((m) => (
 180:           <Text color={theme.text.primary}>
 181:             {m.tokens.input.toLocaleString()}
 182:           </Text>
 183:         ))}

 -  (src/ui/components/ModelStatsDisplay.tsx:180:24)
 -  (src/ui/components/ModelStatsDisplay.tsx:86:63)
 -     at Array.map (<anonymous>)\\t
 - getModelValues (src/ui/components/ModelStatsDisplay.tsx:86:18)
 - ModelStatsDisplay (src/ui/components/ModelStatsDisplay.tsx:179:17)
 -Object.react-stack-bott
  m-frame                (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-r
                         econciler/cjs/react-reconciler.development.js:15859:20)
 -renderWithHoo
  s            (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler/
               cjs/react-reconciler.development.js:3221:22)
 -updateFunctionComp
  nent              (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconc
                    iler/cjs/react-reconciler.development.js:6475:19)
 -beginWor
          (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler/cjs/r
          eact-reconciler.development.js:8009:18)
 -runWithFiberIn
  EV            (/Users/acoliver/projects/llxprt/branch-1/llxprt-code/node_modules/react-reconciler
                /cjs/react-reconciler.development.js:1738:13)
"
`;
